--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 
 
-    <!-- project abdul haris, sidebar-->
+    <!-- project anisa, sidebar-->
     <aside class="sesuaikan">
-        <h1>abdul haris (sidebar)</h1>
+        <h1>anisa (sidebar)</h1>
     </aside>
 
 
-    <!-- project anisa, main -->
+    <!-- project abdul haris, main -->
     <main>
-        <h1>Anisa (main)</h1>
+        <h1>Abdul haris (main)</h1>
     </main>
 
 
